# web

./: .env.template  .gitignore  .pre-commit-config.yaml  .prettierignore  CHANGELOG.md  CONTRIBUTING.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.js  playwright.config.ts  playwright.demo.config.js  playwright.demo.config.ts  pyproject.toml  requirements-dev.txt  tsconfig.json  tsconfig.node.json  vite.config.js  vite.config.ts  vitest.audit.config.ts  vitest.config.ts
.github/: copilot-instructions.md
.github/workflows/: deploy.yml  perf.yml  release.yml  tests.yml
build-plugins/: vite-plugin-openai-key-dev.d.ts  vite-plugin-python-hmr.ts
doc/: README.md  architecture.md  i18n.md  notebooks.md  persistence.md  plugins.md  releasing.md  roadmap.md  shim-registry.md  testing-strategy.md  troubleshooting.md
doc/userguide/: computation-engine.md  differences-from-desktop.md  welcome.md
plugins/: vite-plugin-openai-key-dev.js  vite-plugin-openai-key-dev.ts  vite-plugin-python-hmr.d.ts  vite-plugin-python-hmr.js
plugins/examples/: README.md  datalab_custom_func.py  datalab_example_dialogs.py  datalab_example_empty.py  datalab_example_nested_menus.py
public/: remote-host-example.html
scripts/: extract-changelog.mjs  gen-colormaps.mjs  i18n-extract.mjs  make-demo-gif.mjs  pack-app.mjs  pack-sdk.mjs  perf-to-benchmark-json.mjs  release-summary.mjs  release.mjs  run_with_env.py  serve_coverage.py
src/: App.tsx  main.tsx  styles.css  vite-env.d.ts
src/actions/: buildMenu.ts  buildToolbar.ts  commandSearch.ts  registry.ts  submenuIcons.ts  types.ts
src/aiassistant/: controller.ts  conversationExport.ts  conversationStore.ts  inputHistory.ts  plotCapture.ts  provider.ts  secureStorage.ts  settings.ts  systemPrompt.ts  tools.ts  types.ts
src/assets/: analysisIcons.ts  createIcons.ts  editIcons.ts  featureIcons.ts  h5Icons.ts  helpIcons.ts  ioIcons.ts  roiIcons.ts  rootIcons.ts  svgInline.ts
src/components/: ArrayEditorDialog.tsx  ArrayPreview.tsx  CentralViewSwitcher.tsx  CommandPalette.tsx  ConfirmDialog.tsx  ConsoleStatusIndicator.tsx  ContextMenu.tsx  CoordsEditor.tsx  CurveStyleEditor.tsx  DataSetDialog.tsx  DialogBridge.tsx  DraggableFloating.tsx  EdgeSlowLoadHint.tsx  FloatingDock.tsx  H5BrowserDialog.tsx  HelpDialog.tsx  ImagePlot.tsx  ImageRoiDialog.tsx  InteractiveFitDialog.tsx  MacroConsole.tsx  MacroEditorTabs.tsx  MacroPanel.tsx  MemoryUsageIndicator.tsx  MenuBar.tsx  MenuDropdown.tsx  MetadataDialog.tsx  MetadataEditor.tsx  MultiImagePlot.tsx  MultiImageSpatialPlot.tsx  NewSignalDialog.tsx  ObjectNavigationContext.tsx  ObjectPropertiesDialog.tsx  ObjectStatsCard.tsx  ObjectTree.tsx  OperandPicker.tsx  PanelSwitcher.tsx  PluginConsentDialog.tsx  PluginManagerDialog.tsx  ProfileDefinitionDialog.tsx  ProgressDialog.tsx  (+18 more)
src/i18n/: I18nProvider.tsx  catalogs.ts  index.ts  locale.ts  translate.ts
src/locales/: _dynamic-keys.json  fr.json
src/macros/: macroToNotebook.ts
src/notebook/: NotebookRuntime.ts  nbformat.ts  notebookStore.ts  notebookToMacro.ts  types.ts
src/plugins/: examplePlugins.ts  trustStore.ts
src/runtime/: ComputeWorkerClient.ts  MacroRuntime.ts  ProcessingOrchestrator.ts  RuntimeApi.ts  RuntimeContext.tsx  SigimaContext.tsx  WorkerRuntimeProxy.ts  WorkspaceContext.tsx  _guidata_backends_shim.py  _guidata_jsonschema_shim.py  bootstrap.py  computeProtocol.ts  computeWorker.ts  dlw_h5browser.py  dlw_macro_lint.py  dlw_main.py  dlw_plugins.py  dlw_title_format.py  interruptibleProcessing.ts  kernelWorker.ts  macroWorker.ts  macro_proxy.py  notebookWorker.ts  notebook_display.py  plotStyles.ts  processor.py  proxyBridge.ts  remoteBridge.ts  runtime.ts  runtimeMode.ts  selectionState.ts  useBeforeUnloadGuard.ts  useDocumentTitle.ts  workerBase.ts  workerProtocol.ts
src/sdk/: DataLabWebClient.ts
src/sigima/: MacroRuntime.ts  SigimaContext.tsx  _guidata_backends_shim.py  _guidata_jsonschema_shim.py  bootstrap.py  dlw_h5browser.py  dlw_interactive_fit.py  dlw_main.py  dlw_plugins.py  macroWorker.ts  macro_proxy.py  processor.py  runtime.ts
src/storage/: opfsObjectStore.ts  opfsSyncObjectStore.ts  recentStore.ts
src/types/: pyodide-global.d.ts
src/utils/: colormap.ts  colormapData.ts  consoleLog.ts  imageCoords.ts  imageLod.ts  memory.ts  persisted.ts  pickDirectory.ts  plotlyTheme.ts  releaseNotes.ts  theme.ts  theme.tsx
tests/benchmark/: README.md
tests/e2e/: central_view_switch.spec.ts  clear_recent_probe.spec.ts  fixtures-warm.ts  fixtures.ts  i18n.spec.ts  image-lod.spec.ts  image-pan.spec.ts  image-roi-drag.spec.ts  image_perf.spec.ts  macro.spec.ts  memory.spec.ts  multi-image-spatial.spec.ts  notebook.spec.ts  notebook_bugfixes.spec.ts  notebook_hdf5_roundtrip.spec.ts  notebook_menu.spec.ts  notebook_persistence.spec.ts  notebook_quickstart.spec.ts  notebooks.spec.ts  opfs_storage_bench.spec.ts  opfs_sync_spike.spec.ts  opfs_worker_bench.spec.ts  processing-titles.spec.ts  processing_cancel.spec.ts  react_phase2.spec.ts  remote_control.spec.ts  runtime_phase1.spec.ts  shim_versions_probe.spec.ts  smoke.spec.ts  (+5 more)
(+158 files in other folders)
